@@ -92,6 +92,7 @@ __ZN3KJS11JSImmediate8toObjectEPKNS_7JSValueEPNS_9ExecStateE
 __ZN3KJS11JSImmediate8toStringEPKNS_7JSValueE
 __ZN3KJS11ProgramNode6createEPNS_14SourceElementsEPN3WTF6VectorISt4pairINS_10IdentifierEjELm16EEEPNS4_IPNS_12FuncDeclNodeELm16EEEbb
 __ZN3KJS11PropertyMap11getLocationERKNS_10IdentifierE
+__ZN3KJS11PropertyMap3putERKNS_10IdentifierEPNS_7JSValueEjb
 __ZN3KJS11PropertyMap5clearEv
 __ZN3KJS11PropertyMapD1Ev
 __ZN3KJS12DateInstance4infoE
@@ -192,8 +193,6 @@ __ZN3KJS8JSObject4callEPNS_9ExecStateEPS0_RKNS_4ListE
 __ZN3KJS8JSObject4markEv
 __ZN3KJS8JSObject9constructEPNS_9ExecStateERKNS_4ListE
 __ZN3KJS8JSObject9constructEPNS_9ExecStateERKNS_4ListERKNS_10IdentifierERKNS_7UStringEi
-__ZN3KJS8JSObject9putDirectERKNS_10IdentifierEPNS_7JSValueEi
-__ZN3KJS8JSObject9putDirectERKNS_10IdentifierEii
 __ZN3KJS8Profiler13stopProfilingEv
 __ZN3KJS8Profiler14startProfilingEjRKNS_7UStringE
 __ZN3KJS8Profiler8profilerEv
